--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "main": "MonochromeBitmapImage.js",
   "version": "0.0.1",
   "devDependencies": {
-    "eslint": "^0.10.2",
-    "jasmine-node": "^1.14.5"
+    "eslint": "0.10.2",
+    "jasmine-node": "1.14.5"
   },
   "scripts": {
     "test": "jasmine-node spec",
