--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "mono-bitmap",
-  "description": "Creates in-memory monochrome bitmaps.",
-  "keywords": [
-    "image",
-    "bitmap"
-  ],
-  "author": "Jens Vonderheide <jens@vdheide.de>",
-  "main": "MonochromeBitmapImage.js",
-  "version": "0.0.2",
-  "devDependencies": {
-    "eslint": "0.10.2",
-    "jasmine-node": "1.14.5"
-  },
-  "scripts": {
-    "test": "jasmine-node spec",
-    "lint": "eslint MonochromeBitmapImage.js"
-  },
-  "license": "MIT",
-  "files": [
-    "MonochromeBitmapImage.js",
-    "LICENSE"
-  ],
-  "homepage": "https://github.com/vonderheide/mono-bitmap",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/vonderheide/mono-bitmap.git"
-  }
+	"name": "mono-bitmap",
+	"description": "In-memory bitmap manipulation (reading file, drawing shapes and text)",
+	"keywords": [
+		"bitmap",
+		"image",
+		"BMP",
+		"manipulation"
+	],
+	"author": "Jens Vonderheide <jens@vdheide.de>",
+	"main": "index.js",
+	"version": "0.1.0",
+	"devDependencies": {
+		"eslint": "0.10.2",
+		"jasmine-node": "1.14.5"
+	},
+	"scripts": {
+		"test": "jasmine-node spec",
+		"lint": "eslint index.js"
+	},
+	"license": "MIT",
+	"files": [
+		"index.js",
+		"LICENSE"
+	],
+	"homepage": "https://github.com/vonderheide/mono-bitmap",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/vonderheide/mono-bitmap.git"
+	}
 }
