- Renamed module to "bitmap_manipulation" (GitHub URLs remained the same) - Changed doc comments to a working format of JSDoc - Wrote method for changing the color depth - Wrote method for writing .bmp files - Incorporated the --assume-one-page and --unicode-keys switches from the bmfont2json pull request - Default palette for new images and others - Provided example bitmap font - Provided example drawing script that saves a .bmp file - Updated readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "mono-bitmap",
-	"description": "In-memory bitmap manipulation (reading file, drawing shapes and text)",
+	"name": "bitmap_manipulation",
+	"description": "Bitmap manipulation (reading file, drawing shapes and text)",
 	"keywords": [
 		"bitmap",
 		"image",
