--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jasmine-node": "1.14.5"
   },
   "scripts": {
-    "test": "jasmine-node spec",
+    "test": "jasmine-node --captureExceptions spec",
     "lint": "eslint index.js"
   },
   "license": "MIT",
