--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitmap_manipulation",
+  "name": "bitmap-manipulation",
   "description": "Bitmap manipulation (reading file, drawing shapes and text)",
   "keywords": [
     "bitmap",
@@ -23,7 +23,7 @@
     "struct-fu": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "0.10.2",
+    "eslint": "3.1.1",
     "jasmine-node": "1.14.5"
   },
   "scripts": {
