--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "test": "jasmine-node --captureExceptions spec",
-    "lint": "eslint index.js"
+    "lint": "eslint index.js \"lib/**\""
   },
   "license": "MIT",
   "files": [
