--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "LICENSE"
+    "LICENSE",
+    "lib/"
   ],
   "homepage": "https://github.com/vonderheide/mono-bitmap",
   "repository": {
